--- a/index.html
+++ b/index.html
@@ -17,6 +17,30 @@
         /* setelah halaman content diload maka fungsi ini akan di eksekusi. Hanya untuk yg paham javascript. */
       };
     </script>
+	<center>
+<script type="text/javascript">
+	atOptions = {
+		'key' : '1ed55b4403d7ce4030b5d446ea362b9e',
+		'format' : 'iframe',
+		'height' : 300,
+		'width' : 160,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//deeddrugtask.com/1ed55b4403d7ce4030b5d446ea362b9e/invoke.js"></script>
     <script src='https://pl.apibrainly.my.id/front.js'></script>
+	</center>
+	<!-- Histats.com  START  (aync)-->
+<script type="text/javascript">var _Hasync= _Hasync|| [];
+_Hasync.push(['Histats.start', '1,3489430,4,0,0,0,00010000']);
+_Hasync.push(['Histats.fasi', '1']);
+_Hasync.push(['Histats.track_hits', '']);
+(function() {
+var hs = document.createElement('script'); hs.type = 'text/javascript'; hs.async = true;
+hs.src = ('//s10.histats.com/js15_as.js');
+(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(hs);
+})();</script>
+<noscript><a href="/" target="_blank"><img  src="//sstatic1.histats.com/0.gif?3489430&101" alt="free hit counter script" border="0"></a></noscript>
+<!-- Histats.com  END  -->
   </body>
 </html>
